WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240976
Fix !ENABLE(ACCESSIBILITY) after
r294878
https://bugs.webkit.org/show_bug.cgi?id=240976
Summary
Fix !ENABLE(ACCESSIBILITY) after r294878
Don Olmstead
Reported
2022-05-26 13:49:20 PDT
Missing some methods...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-26 13:49:28 PDT
<
rdar://problem/93993064
>
Don Olmstead
Comment 2
2022-05-26 13:54:39 PDT
Pull request:
https://github.com/webkit/webkit/pull/1069
EWS
Comment 3
2022-05-26 14:08:15 PDT
Committed
r294896
(
251019@main
): <
https://commits.webkit.org/251019@main
> Reviewed commits have been landed. Closing PR #1069 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug