Fix !ENABLE(ACCESSIBILITY) after r294878 https://bugs.webkit.org/show_bug.cgi?id=240976

Reviewed by Chris Fleizach.

Some methods with AXObjectCache were missing an !ENABLE(ACCESSIBILITY) build.

* Source/WebCore/accessibility/AXObjectCache.h:

Canonical link: https://commits.webkit.org/251019@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294896 268f45cc-cd09-0410-ab3c-d52691b4dbfc